--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.undeadinventory</groupId>
     <artifactId>UndeadInventory</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>UndeadInventory</name>
     <description>Spigot plugin for mob-inventory transfer</description>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.20.1-R0.1-SNAPSHOT</version>
+            <version>1.21.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -41,8 +41,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <!-- Use the modern release flag to set source+target in one go -->
-                    <release>21</release>
+                    <!-- Use a widely-supported release for Minecraft server runtimes -->
+                    <release>17</release>
                 </configuration>
             </plugin>
             <plugin>
